# EduGen

./: .env  .gitignore  alembic.ini  apply_fixes.py  dummy.py  seed_data.py
backend/: .gitignore  main.py  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0f8b3e6fb8b8_remove_position_from_lessons.py  2673e555459e_change_in_the_quizes_tables.py  973ca843e506_create_all_tables.py  f0b8dfe20896_remove_the_position_column_in_quiz_.py
backend/app/: main.py
backend/app/core/: config.py  dependencies.py  security.py
backend/app/models/: category.py  certificate.py  course.py  lesson.py  module.py  payment.py  quiz.py  quiz_answer.py  quiz_attempt.py  quiz_question.py
backend/app/repositories/: __init__.py  category_repo.py  course_review_repo.py  lesson_repo.py  module_repo.py  payment_repo.py  quiz_attempt_repo.py  quiz_repo.py  role_repo.py  user_repo.py
backend/app/routes/: auth_routes.py  category_routes.py  certificate_routes.py  course_review_routes.py  course_routes.py  enrollment_routes.py  module_routes.py  quiz_attempt_routes.py  quiz_routes.py  role_routes.py  student_routes.py
backend/app/schemas/: __init__.py  certificate_schemas.py  course_review_schemas.py  course_schemas.py  enrollment.py  enrollment_schemas.py  payment_schemas.py  quiz_answer_schemas.py  quiz_attempt_schemas.py  quiz_question.py  quiz_question_schemas.py  quiz_schemas.py  role_schemas.py  user_schemas.py
backend/app/services/: auth_service.py  certificate_service.py  course_service.py  lesson_service.py  (+3 more)
backend/tests/: conftest.py
(+113 files in other folders)
